UKHomeOffice.dq-raw-message-retrieval-master/kube/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rmr
spec:
  podSelector:
    matchLabels:
      name: dq-raw-message-retrieval
  ingress:
    - ports:
      - protocol: TCP
        port: 10443
